--- a/config/yourub.yml
+++ b/config/yourub.yml
@@ -1,8 +1,8 @@
 yourub_defaults: &yourub_defaults
-  developer_key: 'AIzaSyCCrvqwLhLQKeia7MQH-2kc_IlM8879tig'
+  developer_key: 'AIzaSyB94YNRYbdPpuMLchcoIUTdXmKC1JgXGEY'
   youtube_api_service_name: 'youtube'
   youtube_api_version: 'v3'
-  application_name: "confederation-27"
+  application_name: "confederation-27-2"
   application_version: "0.1"
   log_level: WARN
 
